--- a/app_sena_backend/app/assets/stylesheets/log_in.css
+++ b/app_sena_backend/app/assets/stylesheets/log_in.css
@@ -20,7 +20,6 @@ main {
 }
 
 .field {
-  padding-left: 60px;
   padding-bottom: 10px;
 }
 
@@ -34,4 +33,9 @@ main {
   border: 1px solid blue;
   width: 400px;
   height: 300px;
+  text-align: center;
+}
+
+.logoSena {
+  height: 100px;
 }
