--- a/app_sena_backend/app/assets/stylesheets/log_in.css
+++ b/app_sena_backend/app/assets/stylesheets/log_in.css
@@ -1,4 +1,4 @@
-main {
+.main-new {
   position: absolute;
   top: 0%;
   bottom: 0%;
@@ -14,22 +14,37 @@ main {
 
 .izquierda {
   border: 1px solid red;
+  border-radius: 20px;
   width: 300px;
   height: 300px;
   background-color: white;
 }
 
-.field {
-  padding-bottom: 10px;
-}
-
-.actions {
+.table-login {
+  border: 1px solid blue;
   display: flex;
   justify-content: center;
 }
 
+.table-login>tr>td {
+  padding: 30px;
+}
+
+
+/* .field {
+  border: 1px solid blue;
+  padding-bottom: 10px;
+} */
+
+
+/* .actions {
+  display: flex;
+  justify-content: center;
+} */
+
 .derecha {
   background-color: rgb(255, 145, 0);
+  border-radius: 20px;
   border: 1px solid blue;
   width: 400px;
   height: 300px;
