--- a/app_sena_backend/app/views/layouts/application.html.erb
+++ b/app_sena_backend/app/views/layouts/application.html.erb
@@ -11,8 +11,17 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    
+    
+      <%# user_signed_in? %>
+      <%# link_to "Log out", destroy_user_session_path, method: :delete %>
+      <%# link_to "Iniciar", new_user_session_path %>
+      
+
+    
     
     <%= yield %>
   </body>
