--- a/app_sena_backend/app/assets/stylesheets/log_in.css
+++ b/app_sena_backend/app/assets/stylesheets/log_in.css
@@ -1,51 +1,46 @@
+* {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 .main-new {
+  background-color: grey;
+  background-image: url("https://auren.com/co/wp-content/uploads/2019/12/segunda-convocatoria-sena-2018.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
   position: absolute;
   top: 0%;
   bottom: 0%;
   right: 0%;
   left: 0%;
   /* background-color: rgb(252, 200, 133); */
-  border: 2px solid green;
-  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
 .izquierda {
-  border: 1px solid red;
   border-radius: 20px;
   width: 300px;
   height: 300px;
   background-color: white;
 }
 
-.table-login {
-  border: 1px solid blue;
-  display: flex;
-  justify-content: center;
+.centrar {
+  text-align: center;
 }
 
-.table-login>tr>td {
-  padding: 30px;
+.casilla {
+  width: 90%;
+  height: 25px;
+  border-radius: 10px;
 }
 
-
-/* .field {
-  border: 1px solid blue;
-  padding-bottom: 10px;
-} */
-
-
-/* .actions {
-  display: flex;
-  justify-content: center;
-} */
+.links-home {
+  padding-left: 10px;
+}
 
 .derecha {
-  background-color: rgb(255, 145, 0);
+  background-color: white;
   border-radius: 20px;
-  border: 1px solid blue;
   width: 400px;
   height: 300px;
   text-align: center;
