--- a/app_sena_backend/app/views/main/home.html.erb
+++ b/app_sena_backend/app/views/main/home.html.erb
@@ -8,7 +8,7 @@
     <header>
       <nav class="nav-home">
         <%= image_tag "logoSena.png", class: "miniLogoSena" %>
-      <%# user_signed_in? %>
+      <%= user_signed_in? %>
       <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
       <%# link_to "Iniciar", new_user_session_path %>
       </nav>
