--- a/app_sena_backend/app/views/devise/registrations/new.html.erb
+++ b/app_sena_backend/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,42 @@
-<h2>Sign up</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <%= stylesheet_link_tag "registrar" %>
+    <title>Registrarse</title>
+  </head>
+  <body>
+    <main class="main-registrar">
+      <section class="centro-registrar">
+        <h2 class="centrar-registrar">Registrarse</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+          <div class="field">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electrónico", class: "casilla-registrar" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+          <div class="field">
+            <% if @minimum_password_length %>
+            <em>(Mínimo <%= @minimum_password_length %> carácteres)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: "Contraseña", class: "casilla-registrar" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+          <div class="field">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirmar contraseña", class: "casilla-registrar" %>
+          </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+          <div class="actions centrar">
+            <%= f.submit "Registrar", class: "btn" %>
+          </div>
+        <% end %>
+        <br>
 
-<%= render "devise/shared/links" %>
+        <div class="links-home">
+          <%= render "devise/shared/links" %>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
