--- a/app_sena_backend/app/views/devise/passwords/new.html.erb
+++ b/app_sena_backend/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Forgot your password?</h2>
+<html>
+  <head>
+    <%= stylesheet_link_tag "registrar" %>
+    <title>Editar contraseña</title>
+  </head>
+  <body>
+    <main class="main-registrar">
+      <section class="centro-registrar">
+        <h2 class="centrar-registrar">Olvidaste tu contraseña?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+          <div class="field">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electronico", class: "casilla-registrar" %>
+          </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+          <div class="actions">
+            <%= f.submit "Send me reset password instructions" %>
+          </div>
+        <% end %>
 
-<%= render "devise/shared/links" %>
+        <%= render "devise/shared/links" %>
+      </section>
+    </main>
+  </body>
+</html>
