terminado el estilo de password
terminado el estilo de password

--- a/app_sena_backend/app/assets/stylesheets/home.css
+++ b/app_sena_backend/app/assets/stylesheets/home.css
@@ -9,6 +9,9 @@
 
 .nav-home {
   border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   /* background-color: black; */
 }
 
