--- a/app_sena_backend/app/assets/stylesheets/log_in.css
+++ b/app_sena_backend/app/assets/stylesheets/log_in.css
@@ -53,6 +53,7 @@
   color: #fff;
   display: inline-block;
   padding: 10px 15px;
+  margin-top: 5px;
   font-size: 14px;
   cursor: pointer;
   text-align: center;
