--- a/app_sena_backend/app/views/devise/passwords/new.html.erb
+++ b/app_sena_backend/app/views/devise/passwords/new.html.erb
@@ -15,12 +15,15 @@
             <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electronico", class: "casilla-registrar" %>
           </div>
 
-          <div class="actions">
-            <%= f.submit "Send me reset password instructions" %>
+          <div class="actions centrar">
+            <%= f.submit "Send me reset password instructions", class: "btn" %>
           </div>
         <% end %>
-
-        <%= render "devise/shared/links" %>
+        <br>
+        
+        <div class="links-home">
+          <%= render "devise/shared/links" %>
+        </div>
       </section>
     </main>
   </body>
