--- a/app_sena_backend/app/views/main/home.html.erb
+++ b/app_sena_backend/app/views/main/home.html.erb
@@ -5,27 +5,29 @@
   </head>
   <body>  
     <main class="main-home">
-    <header>
-      <nav class="nav-home">
-        <%= image_tag "logoSena.png", class: "miniLogoSena" %>
-      <%= user_signed_in? %>
-      <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
-      <%# link_to "Iniciar", new_user_session_path %>
-      </nav>
-    </header>
-    <div class="div-home">
-      <section class="izquierda-home">
-        <ul>
-          <li><a href="#">Areas</a></li>
-          <li><a href="#">Programas</a></li>
-          <li><a href="#">Cursos</a></li>
-        </ul>
-      </section>
-      <section class="derecha-home">
-        <h1>Main#home</h1>
-        <p>Find me in app/views/main/home.html.erb</p>
-      </section>
-    </div>
+      <header>
+        <nav class="nav-home">
+          <%= image_tag "logoSena.png", class: "miniLogoSena" %>
+          <span>
+          <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
+          </span>
+        </nav>
+      </header>
+
+      <div class="div-home">
+        <section class="izquierda-home">
+          <ul>
+            <li><a href="#">Areas</a></li>
+            <li><a href="#">Programas</a></li>
+            <li><a href="#">Cursos</a></li>
+          </ul>
+        </section>
+
+        <section class="derecha-home">
+          <h1>Main#home</h1>
+          <p>Find me in app/views/main/home.html.erb</p>
+        </section>
+      </div>
     </main>
   </body>
 </html>
