--- a/app_sena_backend/app/assets/stylesheets/application.css
+++ b/app_sena_backend/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+footer {
+  border: 1px solid blue;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 30px;
+  background-color: gray;
+  text-align: center;
+  margin-top: 20px;
+}
