--- a/app_sena_backend/app/assets/stylesheets/home.css
+++ b/app_sena_backend/app/assets/stylesheets/home.css
@@ -1,10 +1,10 @@
 .main-home {
   border: 1px solid red;
   position: absolute;
-  top: 0%;
-  bottom: 0%;
-  right: 0%;
-  left: 0%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .nav-home {
@@ -19,11 +19,16 @@
   height: 40px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .div-home {
   border: 2px solid purple;
-  bottom: 0%;
+  height: 88%;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .izquierda-home {
