--- a/app_sena_backend/app/views/layouts/application.html.erb
+++ b/app_sena_backend/app/views/layouts/application.html.erb
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-    
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     
@@ -24,5 +23,10 @@
     
     
     <%= yield %>
+
+      <footer>
+        <b>Versión 1.0</b>
+      </footer>
+
   </body>
 </html>
