--- a/app_sena_backend/app/views/layouts/application.html.erb
+++ b/app_sena_backend/app/views/layouts/application.html.erb
@@ -24,9 +24,9 @@
     
     <%= yield %>
 
-      <footer>
+      <%# <footer>
         <b>Versión 1.0</b>
-      </footer>
+      </footer> %>
 
   </body>
 </html>
