--- a/app_sena_backend/app/views/devise/passwords/new.html.erb
+++ b/app_sena_backend/app/views/devise/passwords/new.html.erb
@@ -1,29 +1,56 @@
 <html>
   <head>
-    <%= stylesheet_link_tag "registrar" %>
+    <%= stylesheet_link_tag "log_in" %>
     <title>Editar contraseña</title>
   </head>
   <body>
-    <main class="main-registrar">
-      <section class="centro-registrar">
-        <h2 class="centrar-registrar">Olvidaste tu contraseña?</h2>
+    <main class="main-new">
+      <section class="izquierda">
+      </section>
 
-        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-
-          <div class="field">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electronico", class: "casilla-registrar" %>
+      <section class="derecha">
+        <aside class="derecha-arriba">
+          <div class="derecha-div">
+            <%= image_tag "logoSena.png", class: "logoSena" %>
           </div>
-
-          <div class="actions centrar">
-            <%= f.submit "Send me reset password instructions", class: "btn" %>
+          <div class="derecha-div">
+            <h3>CONTÁCTENOS</h3>
+            <p> 
+              <%= image_tag "http://assets.stickpng.com/images/580b57fcd9996e24bc43c543.png", class: "logoMini" %>
+              3020930930
+            </p>
+            <p> 
+              <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/800px-Instagram-Icon.png", class: "logoMini" %>
+              #sena
+            </p>
+            <p> 
+              <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg", class: "logoMini" %>
+              sena
+            </p>
           </div>
-        <% end %>
-        <br>
+        </aside>
         
-        <div class="links-home">
-          <%= render "devise/shared/links" %>
-        </div>
+        <section class="derecha abajo">
+          <h2 class="centrar-registrar">Olvidaste tu contraseña?</h2>
+
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+
+            <div class="field">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electronico", class: "casilla-registrar" %>
+            </div>
+
+            <div class="actions centrar">
+              <%= f.submit "Send me reset password instructions", class: "btn" %>
+            </div>
+          <% end %>
+          <br>
+          
+          <div class="links-home">
+            <%= render "devise/shared/links" %>
+          </div>
+          <br>
+        </section>
       </section>
     </main>
   </body>
