--- a/app_sena_backend/app/views/devise/registrations/new.html.erb
+++ b/app_sena_backend/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,68 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= stylesheet_link_tag "registrar" %>
+    <%= stylesheet_link_tag "log_in" %>
     <title>Registrarse</title>
   </head>
   <body>
-    <main class="main-registrar">
-      <section class="centro-registrar">
-        <h2 class="centrar-registrar">Registrarse</h2>
+    <main class="main-new">
+      <section class="izquierda">
+      </section>
 
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-
-          <div class="field">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electrónico", class: "casilla-registrar" %>
+      <section class="derecha">
+        <aside class="derecha-arriba">
+          <div class="derecha-div">
+            <%= image_tag "logoSena.png", class: "logoSena" %>
           </div>
-
-          <div class="field">
-            <% if @minimum_password_length %>
-            <em>(Mínimo <%= @minimum_password_length %> carácteres)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "new-password", placeholder: "Contraseña", class: "casilla-registrar" %>
+          <div class="derecha-div">
+            <h3>CONTÁCTENOS</h3>
+            <p> 
+              <%= image_tag "http://assets.stickpng.com/images/580b57fcd9996e24bc43c543.png", class: "logoMini" %>
+              3020930930
+            </p>
+            <p> 
+              <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/800px-Instagram-Icon.png", class: "logoMini" %>
+              #sena
+            </p>
+            <p> 
+              <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg", class: "logoMini" %>
+              sena
+            </p>
           </div>
+        </aside>
 
-          <div class="field">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirmar contraseña", class: "casilla-registrar" %>
-          </div>
+        <aside class="derecha-abajo">
+          <h2 class="centrar-registrar">Registrarse</h2>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="actions centrar">
-            <%= f.submit "Registrar", class: "btn" %>
-          </div>
-        <% end %>
-        <br>
+            <div class="field">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Correo Electrónico", class: "casilla-registrar" %>
+            </div>
 
-        <div class="links-home">
-          <%= render "devise/shared/links" %>
-        </div>
+            <div class="field">
+              <% if @minimum_password_length %>
+              <em>(Mínimo <%= @minimum_password_length %> carácteres)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "Contraseña", class: "casilla-registrar" %>
+            </div>
+
+            <div class="field">
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirmar contraseña", class: "casilla-registrar" %>
+            </div>
+
+            <div class="actions centrar">
+              <%= f.submit "Registrar", class: "btn" %>
+            </div>
+            <% end %>
+            <br>
+
+            <div class="links-home">
+              <%= render "devise/shared/links" %>
+            </div>
+            <br>
+        </aside>
+
       </section>
     </main>
   </body>
