primer crud con index

--- a/app_sena_backend/app/views/main/home.html.erb
+++ b/app_sena_backend/app/views/main/home.html.erb
@@ -17,15 +17,16 @@
       <div class="div-home">
         <section class="izquierda-home">
           <ul>
-            <li><a href="#">Areas</a></li>
+            <li><%= link_to "Areas", areas_path, :method => :get %></li>
             <li><a href="#">Programas</a></li>
             <li><a href="#">Cursos</a></li>
           </ul>
         </section>
 
         <section class="derecha-home">
-          <h1>Main#home</h1>
-          <p>Find me in app/views/main/home.html.erb</p>
+          <h1>Enlaces a areas</h1>
+          
+          
         </section>
       </div>
     </main>
