--- a/app_sena_backend/app/assets/stylesheets/home.css
+++ b/app_sena_backend/app/assets/stylesheets/home.css
@@ -1,3 +1,11 @@
+:root {
+  --aguamarina: #00acee;
+}
+
+body {
+  background-color: #ddd;
+}
+
 .main-home {
   border: 1px solid red;
   position: absolute;
@@ -5,6 +13,7 @@
   bottom: 0;
   right: 0;
   left: 0;
+  box-sizing: border-box;
 }
 
 .nav-home {
@@ -19,22 +28,83 @@
   height: 40px;
 }
 
-a {
-  text-decoration: none;
-}
-
 .div-home {
   border: 2px solid purple;
   height: 88%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 
-.izquierda-home {
-  border: 1px solid blue;
+
+/* Tabs */
+
+.tabs {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 680px;
+  height: 360px;
+  padding: 30px 20px;
+  background: #f5f5f5;
+  box-shadow: 5px 5px 10px 5px #ccc;
+  overflow: hidden;
 }
 
-.derecha-home {
-  border: 1px solid green;
+
+/* Tabs-header */
+
+.tabs .tab-header {
+  float: left;
+  width: 180px;
+  height: 100%;
+  border-right: 1px solid #ccc;
+  padding: 50px 0px;
+}
+
+.tabs .tab-header div {
+  height: 50px;
+  line-height: 50px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #888;
+  cursor: pointer;
+  padding-left: 10px;
+}
+
+.tabs .tab-header>div:hover,
+.tabs .tab-header>div.active {
+  color: var(--aguamarina);
+}
+
+
+/* Tab-indicator */
+
+.tabs .tab-indicator {
+  position: absolute;
+  width: 4px;
+  height: 50px;
+  background: var(--aguamarina);
+  left: 198px;
+  top: 80px;
+  transition: all 500ms ease-in-out;
+}
+
+
+/* Tab-content */
+
+.tabs .tab-content {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
+
+.tabs .tab-content div {
+  position: absolute;
+  text-align: center;
+  padding: 40px 20px;
+  top: -270px;
+  transition: all 500ms ease-in-out;
+}
+
+.tabs .tab-content>div.active {
+  top: 0px;
 }
