--- a/app_sena_backend/app/views/areas/index.html.erb
+++ b/app_sena_backend/app/views/areas/index.html.erb
@@ -3,7 +3,7 @@
 </span>
 
 <span class="span-nuevo">
-  <b><%= link_to "Nueva", areas_new_path, :method => :get, class: "btn-nuevo" %></b>
+  <b><%= link_to "Nueva", new_area_path, :method => :get, class: "btn-nuevo" %></b>
 </span>
 
 <div class="tabs">
