--- a/app_sena_backend/app/assets/stylesheets/log_in.css
+++ b/app_sena_backend/app/assets/stylesheets/log_in.css
@@ -15,6 +15,10 @@
   padding-right: 25px;
 }
 
+section {
+  height: 100%;
+}
+
 .izquierda {
   background-image: url("https://auren.com/co/wp-content/uploads/2019/12/segunda-convocatoria-sena-2018.png");
   background-repeat: no-repeat;
