--- a/app_sena_backend/app/views/main/home.html.erb
+++ b/app_sena_backend/app/views/main/home.html.erb
@@ -22,13 +22,13 @@
       <h2>Areas</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus possimus doloribus dolorem. Ex, totam odit. Illum eius accusamus laudantium explicabo voluptate harum ipsa enim ducimus! Fugiat similique quo libero quam!</p>
       <%= link_to "Ver Areas", areas_path, :method => :get, class: "span-ver link"%>
-      <%= link_to "Crear Area", areas_new_path, :method => :get, class: "span-crear link" %>
+      <%= link_to "Crear Area", new_area_path, :method => :get, class: "span-crear link" %>
     </div>
     <div>
       <h2>Programas</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus possimus doloribus dolorem. Ex, totam odit. Illum eius accusamus laudantium explicabo voluptate harum ipsa enim ducimus! Fugiat similique quo libero quam!</p>
-      <%= link_to "Ver Programas", areas_path, :method => :get, class: "span-ver link"%>
-      <%= link_to "Crear Programas", areas_path, :method => :get, class: "span-crear link" %>
+      <%= link_to "Ver Programas", area_programas_path(@area, @programa) %>
+      <%# link_to "Crear Programas", new_area_programa_path, :method => :get, class: "span-crear link" %>
     </div>
   </div>
 </div>
