borrado y agregado parametros
borrado content_area de areas
creado description_program de programas

--- a/app_sena_backend/app/views/main/home.html.erb
+++ b/app_sena_backend/app/views/main/home.html.erb
@@ -27,7 +27,7 @@
     <div>
       <h2>Programas</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus possimus doloribus dolorem. Ex, totam odit. Illum eius accusamus laudantium explicabo voluptate harum ipsa enim ducimus! Fugiat similique quo libero quam!</p>
-      <%= link_to "Ver Programas", area_programas_path(@area, @programa) %>
+      <%# link_to "Ver Programas", area_programas_path(@area, @programa) %>
       <%# link_to "Crear Programas", new_area_programa_path, :method => :get, class: "span-crear link" %>
     </div>
   </div>
